[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'capypdf'
version = '0.7.0'
description = 'A color managed PDF generation library tech preview'
readme = 'readme.md'
requires-python = '>=3.10'
license = {file = 'COPYING'}
authors = [
  {name = 'Jussi Pakkanen', email = 'jpakkane@gmail.com'},
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python :: 3',
    'Programming Language :: C++',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.meson-python.args]
setup = ['--debug']
install = ['--skip-subprojects=lcms2', '--tags=runtime,python-runtime']
